# teos_contribution_pool

./: API_DOC.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  deployment_guide.md  index.html  main.py  package-lock.json  package.json
.github/workflows/: cd.yml  ci.yml  deploy.yml
backend/src/: .env  package.json  server.js
backend/src/controllers/: contributionController.js  userController.js
backend/src/middleware/: authMiddleware.js
backend/src/models/: Contribution.js  User.js
backend/src/routes/: contributionRoutes.js
backend/src/utils/: db.js
contracts/: Cargo.toml
contracts/src/: contribution.rs  utils.rs
contracts/tests/: contribution_tests.rs  integration_tests.rs
docs/: api.md  architecture.md  user_guide.md
frontend/: .env  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: .env  app.js  index.js  package.json  tailwind.config.js
frontend/src/components/: ContributionForm.js  ContributionList.js  Navbar.js
frontend/src/hooks/: useWallet.js
frontend/src/utils/: api.js
scripts/: deploy.sh  setup.sh
